Scaffold identity into an MVC project without existing authorization

--- a/3LTB/3LTB/appsettings.json
+++ b/3LTB/3LTB/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "_3LTBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=3LTB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
