Sequence tables complete with PKs and FKs set up properly.  Still missing the joining table for DaysOp and actual OpDates

--- a/3LTB/3LTB/3LTB.csproj
+++ b/3LTB/3LTB/3LTB.csproj
@@ -28,6 +28,14 @@
     <Compile Remove="Migrations\20200130174606_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200130215231_InitialCreate.cs" />
     <Compile Remove="Migrations\20200130215231_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200131232404_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200131232404_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200201121832_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200201121832_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200201124213_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200201124213_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200201124726_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200201124726_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
