Sequence and Duty Period populating databse - need to refactor to avoid initializing empty sequence/DutyPeriod objects.

--- a/3LTB/3LTB/3LTB.csproj
+++ b/3LTB/3LTB/3LTB.csproj
@@ -50,6 +50,48 @@
     <Compile Remove="Migrations\20200209010430_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200209010748_InitialCreate.cs" />
     <Compile Remove="Migrations\20200209010748_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200209020119_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200209020119_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200211233854_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200211233854_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216152251_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216152251_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216153129_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216153129_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216153811_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216153811_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216200304_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216200304_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216203430_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216203430_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216204412_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216204412_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216204808_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216204808_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216210636_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216210636_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216211727_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216211727_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216222413_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216222413_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216224402_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216224402_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216224619_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216224619_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216225144_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216225144_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200216225545_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200216225545_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200217024049_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200217024049_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200217144322_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200217144322_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200219135809_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200219135809_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200219140447_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200219140447_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200219141729_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200219141729_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
