fixed merging problems after upgrading to csvHelper 15 reverted back to vs 14- back to working as needed

--- a/3LTB/3LTB/3LTB.csproj
+++ b/3LTB/3LTB/3LTB.csproj
@@ -124,6 +124,8 @@
     <Compile Remove="Migrations\20200226120654_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200226162422_InitialCreate.cs" />
     <Compile Remove="Migrations\20200226162422_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200303120506_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200303120506_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
