Textricator csv upload completed - but stops at row 1000

--- a/3LTB/3LTB/3LTB.csproj
+++ b/3LTB/3LTB/3LTB.csproj
@@ -126,6 +126,102 @@
     <Compile Remove="Migrations\20200226162422_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200303120506_InitialCreate.cs" />
     <Compile Remove="Migrations\20200303120506_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200303125925_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200303125925_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200303132401_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200303132401_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200303193954_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200303193954_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200306140624_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200306140624_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200306141432_add-migration InitialCreate.cs" />
+    <Compile Remove="Migrations\20200306141432_add-migration InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200306220211_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200306220211_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200308233015_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200308233015_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309143125_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309143125_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309143752_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309143752_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309144412_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309144412_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309144833_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309144833_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309145721_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309145721_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309150725_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309150725_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309151455_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309151455_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309194018_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309194018_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309211144_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309211144_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200309213019_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200309213019_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200310110741_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200310110741_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200310111422_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200310111422_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200310111725_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200310111725_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200310113709_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200310113709_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200311115207_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200311115207_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200311115732_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200311115732_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200311122042_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200311122042_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200311122442_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200311122442_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200410180810_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200410180810_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200415120450_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200415120450_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200415123159_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200415123159_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200501215516_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200501215516_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200501220210_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200501220210_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200502203310_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200502203310_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200502204530_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200502204530_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200504105522_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200504105522_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200504113718_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200504113718_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507124443_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507124443_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507132541_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507132541_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507142213_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507142213_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507142847_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507142847_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507143722_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507143722_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507144744_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507144744_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507150332_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507150332_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507151601_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507151601_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507152745_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507152745_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507153300_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507153300_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507154023_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507154023_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507154709_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507154709_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507155539_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507155539_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200507160226_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200507160226_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
